Return the Users email and display name on the AuthStatus endpoint
