# handlers/token_handler.go
@@ -37,30 +37,34 @@ func (s *Server) GetAuthProviderToken(w http.ResponseWriter, r *http.Request, pr
 	}
 
 	// Check if the token is expired
-	if token.Expiry.Before(time.Now()) {
+	if token.Token.Expiry.Before(time.Now()) {
 		// Refresh the token
 		oauthConfig := config.Providers[provider]
-		newToken, err := utils.RefreshAccessTokenFunc(oauthConfig, token.RefreshToken)
+		newToken, err := utils.RefreshAccessTokenFunc(oauthConfig, token.Token.RefreshToken)
 		if err != nil {
 			http.Error(w, "Failed to refresh token: "+err.Error(), http.StatusInternalServerError)
 			return
 		}
 
 		// Update the token in storage
-		err = services.StoreAuthToken(sessionCookie.Value, provider, "todo", newToken)
-		if err != nil {
-			http.Error(w, "Failed to store refreshed token", http.StatusInternalServerError)
-			return
+		// Extract user info from `token`
+		userInfo := &services.UserInfo{
+			ID:          token.UserID,
+			DisplayName: token.DisplayName,
+			Email:       token.Email,
 		}
 
-		token = newToken
+		// Update the token in storage
+		err = services.StoreAuthToken(sessionCookie.Value, provider, userInfo, newToken)
+
+		token.Token = newToken
 	}
 
 	// Return the token
 	response := map[string]interface{}{
-		"access_token":  token.AccessToken,
-		"refresh_token": token.RefreshToken,
-		"expires_in":    token.Expiry.Unix(),
+		"access_token":  token.Token.AccessToken,
+		"refresh_token": token.Token.RefreshToken,
+		"expires_in":    token.Token.Expiry.Unix(),
 	}
 
 	w.Header().Set("Content-Type", "application/json")
