# openapi.yaml
@@ -119,18 +119,54 @@ paths:
   /auth/status:
     get:
       summary: Retrieve a list of connected providers that the user is logged in with
+      description: Returns a list of providers along with login status and user details.
       responses:
         '200':
           description: List of connected providers.
           content:
             application/json:
               schema:
-                type: object
-                additionalProperties:
-                  type: boolean
-                example:
-                  spotify: true
-                  tidal: false
+                type: array
+                items:
+                  type: object
+                  properties:
+                    provider:
+                      type: string
+                      example: "spotify"
+                    user_id:
+                      type: string
+                      example: "user123"
+                    display_name:
+                      type: string
+                      example: "John Doe"
+                    email:
+                      type: string
+                      example: "john@example.com"
+                    logged_in:
+                      type: boolean
+                      example: true
+              examples:
+                Single Provider Logged In:
+                  value:
+                    - provider: "spotify"
+                      user_id: "user123"
+                      display_name: "John Doe"
+                      email: "john@example.com"
+                      logged_in: true
+                Multiple Providers Logged In:
+                  value:
+                    - provider: "spotify"
+                      user_id: "user123"
+                      display_name: "John Doe"
+                      email: "john@example.com"
+                      logged_in: true
+                    - provider: "tidal"
+                      user_id: "user456"
+                      display_name: "Alice Smith"
+                      email: "alice@example.com"
+                      logged_in: true
+                No Providers Logged In:
+                  value: [ ]
         '400':
           description: Bad request, missing session ID.
         '401':
